2013-12-23  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display_x68kgrf.c: x68k_set_tvram_cmap() and x68k_set_use_tvram_colors()
	  are changed to static functions.

	* fb/x_display.[ch]: x_display_enable_to_change_cmap() is added.

	* version.h.in: 3.3.2 -> 3.3.2post

2013-12-22  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: Only if _display.pixels_per_byte is 8, multiple planes
	  of scrolled lines are copied.

2013-12-21  Araki Ken  <arakiken@users.sf.net>

	* 3.3.2 released.
	  (tag "rel-3_3_2")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.3.2.

2013-12-21  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: The bug which drew mouse cursor incorrectly on 4bpp is fixed.

	* gtk/vte.c:
	  - The bug which disabled true transparency on roxterm just after it
	    started is fixed.
	  - Hack for roxterm works if it started as "x-terminal-emulator" or
	    "exo-open --launch TerminalEmulator".

	* jni/x_display.c: x_display_set_use_ansi_colors() is added.

	* win32/x_window.c: x_window_{xct|utf}_selection_request() works as a thread.

	* ml_line.c: Segfault caused by zero column characters like 0x200e is fixed.

2013-12-19  Araki Ken  <arakiken@users.sf.net>

	* x_display_wscons.c: The palette of 4bpp framebuffer is initialized
	  to monochrome if --depth 1 option is specified.

	* fb/x_display.c: put_image_124bpp() is fixed.

	* c_imagelib.c, fb/x_imagelib.c, fb/x_display.c:
	  If the value of "use_ansi_colors" option is false on 4bpp framebuffer,
	  the colors used by the wall picture are set to framebuffer palette
	  by x_display_set_use_ansi_colors() and x_display_set_cmap().

	* win32/x_window.c: Fix error check of OpenClipboard().

	* x_main_config.c: Even if the default value is specified for "use_urgent_bell",
	  "exit_backscroll_by_pty", "allow_change_shortcut", "allow_scp", "use_clipboard",