@@ -1,4 +1,6 @@
 ver 3.3.3
+* All configuration protocol keys whose value is boolean accept "switch"
+  which inverts the current value.
 * Bug fixes:
   Fix the bug of scrolling on framebuffer.
 
@@ -11,11 +13,11 @@ ver 3.3.2
 * Add vte_terminal_set_color_*_rgba() functions to libvte compatible library.
 * Bug fixes:
   Fix memory leak when opening pty fails on win32gdi.
-  Fix the bug which disabled to clear hidden input method window it if large
+  Fix the bug which disabled to clear in hiding input method window if large
   value is specified for --border option.
   Fix the bug which disabled to paste UTF-8 string.
   Bitbucket pull request #1 (Thanks to Hayaki Saito san)
-  Fix the bug which causes segfault in pasting text via win32 clipboard from x11
+  Fix the bug which caused segfault in pasting text via win32 clipboard from x11
   applications over ssh x11 forwarding
   Fix segfault caused by zero column characters like 0x200e.
 
