@@ -29,6 +29,14 @@
 #define  BUILTIN_IMAGELIB	/* Necessary to use create_cardinals_from_sixel() */
 #include  "../../common/c_imagelib.c"
 
+static void
+help(void)
+{
+	printf( "mlimgloader [window id] [width] [height] [file path] (-c)\n") ;
+	printf( " window id: ignored.\n") ;
+	printf( " -c       : output XA_CARDINAL format data to stdout.\n") ;
+}
+
 
 /* --- global functions --- */
 
@@ -49,7 +57,7 @@ main(
 
 	if( argc != 6 || strcmp( argv[5] , "-c") != 0)
 	{
-		return  -1 ;
+		goto  error ;
 	}
 
 	if( ! ( cardinal = (u_char*)create_cardinals_from_sixel( argv[4])))
@@ -62,7 +70,7 @@ main(
 		if( ! ( cardinal = (u_char*)create_cardinals_from_sixel( winpath)))
 	#endif
 		{
-			return  -1 ;
+			goto  error ;
 		}
 	}
 
@@ -80,7 +88,7 @@ main(
 
 		if( ( n_wr = write( STDOUT_FILENO , cardinal , size)) < 0)
 		{
-			return  -1 ;
+			goto  error ;
 		}
 
 		cardinal += n_wr ;
@@ -92,4 +100,8 @@ main(
 #endif
 
 	return  0 ;
+
+error:
+	help() ;
+	return  -1 ;
 }
